# quorum-coding-challenge

./: .env.example  .flake8  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  questions.md  requirements.txt
core/: settings.py  urls.py
csv_data/: bills.csv
legislative/: models.py  serializers.py  urls.py  views.py
legislative/management/commands/: load_data.py
legislative/migrations/: 0001_initial.py
legislative/templates/legislative/: base.html  bill_detail.html  bills.html  home.html  legislator_detail.html  legislators.html
tests/: test_api.py  test_loader_validation.py  test_management_commands.py  test_models.py
tests/fixtures/: bills.csv  legislators.csv  vote_results.csv  votes.csv
